--- a/CaioLarroza-TesteWeb/src/app/motorista/motorista-lista/motorista-lista.component.html
+++ b/CaioLarroza-TesteWeb/src/app/motorista/motorista-lista/motorista-lista.component.html
@@ -2,6 +2,7 @@
 <table class="table table-hover">
     <thead>
       <tr>
+        <th>dddd</th>
         <th>Nome</th>
         <th>CPF</th>
         <th>Data de Nascimento</th>
@@ -12,12 +13,15 @@
     </thead>
     <tbody>
       <tr *ngFor="let m of motorista| async">
-      	<td>{{m.nomeMoto}}</td>
+      	<td>{{key}}</td>
+        <td>{{m.nomeMoto}}</td>
       	<td>{{m.cpfMoto}}</td>
       	<td>{{m.datanascMoto}}</td>
       	<td>{{m.sexoMoto}}</td>               
       	<td>{{m.carroMoto}}</td>                
       	<td>{{m.statusMoto}}</td>
+        <td><button (click) = "update(m.statusMoto)" class="btn btn-warning">Editar status</button></td>
+
       </tr>
     </tbody>
   </table>
