--- a/CaioLarroza-TesteWeb/src/app/passageiro/passageiro-form/passageiro-form.component.html
+++ b/CaioLarroza-TesteWeb/src/app/passageiro/passageiro-form/passageiro-form.component.html
@@ -1,16 +1,16 @@
 <h1>Passageiros</h1>
 <form #f="ngForm" (submit)="form_submit(f)">
 	<label>Nome:</label>
-	<input ngModel class="form-control" type="text" name="nome" placeholder="Nome">
+	<input ngModel class="form-control" type="text" name="nome" placeholder="Nome" required>
 	<br>
 	<label>CPF:</label>
-	<input ngModel class="form-control" type="text" name="cpf" placeholder="Digite seu CPF">
+	<input ngModel class="form-control" type="text" name="cpf" placeholder="Digite seu CPF" required>
 	<br>
 	<label>Data de Nascimento: </label>
-	<input ngModel class="form-control" type="date" name="datanasc">
+	<input ngModel class="form-control" type="date" name="datanasc" required>
 	<br>
 	<label>Sexo:</label>
-	<select ngModel class="form-control" name="sexo" id="sel1">
+	<select ngModel class="form-control" name="sexo" id="sel1" required>
     	<option selected="">Masculino</option>
     	<option>Feminino</option>   	
   	</select>
